# unity-lbm-af

./: build-lbm.sh
Assets/: AF3DTexture.asset  BG.asset  Example3DTexture.cs  LBM.cs  Movement.cs  NewUnlitShader.shader  Reference.cs  Results.mat  Sim.cs  Sim3D.cs  SimOpenCL.cs  SliceRenderingShader.shader
Assets/GUI/: OnValueChangedText.cs  Tablet.cs  gui.uxml
Assets/Materials/: AF3DTexture 1.mat  AF3DTexture 2.mat  AF3DTexture 3.mat  AF3DTexture 4.mat  AF3DTexture.mat  Example3DTexture 1.mat  Example3DTexture.mat
Assets/Plugins/: LBM.cs
Assets/Scenes/: SampleScene.unity  SimulationScene.unity
Assets/UI Toolkit/: PanelSettings.asset
Assets/XR/: XRGeneralSettings.asset
Assets/XR/Settings/: Open XR Package Settings.asset
LBM/: Cargo.toml
LBM/examples/: af_opencl_texture.rs  af_to_texture.rs  d2q9_bgk_lid.rs  d3q27_bgk_lid.rs
LBM/old/: lib.old  vertex.glsl
LBM/src/: boundary.rs  debug.rs  distribution.rs  fragment.glsl  geometry.rs  grid.rs  lbm.rs  lib.rs  lid.rs  main.rs  main2.rs  physics.rs  solver.rs  streaming.rs  traits.rs
LBM/src/distribution/: d2q9.rs
LBM/src/geometry/: circle.rs  plane.rs
LBM/src/physics/: ns.rs
ProjectSettings/: EditorBuildSettings.asset  PresetManager.asset  ProjectSettings.asset
