[package]
name = "lbmaf"
version = "0.1.0"
description = "LBM solver using ArrayFire with visualization in Unity"
authors = ["Michal Takac <takacmichal92@gmail.com>"]
edition = "2018"

[dependencies]
libc = "0.2.90"
arrayfire = "3.8"
time = "0.1.*"
unity-native-plugin = "0.4.1"
log = "0.4.14"
log4rs = "1.0.0"

[lib]
name = "lbmaf"
path = "src/lib.rs"
crate-type = ["staticlib", "rlib", "dylib"]

